tambah beberapa text & coba ubah bagian product

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <link rel="stylesheet" href="./css/contactus.css">
         <link rel="stylesheet" href="./css/product.css">
         <link rel="stylesheet" href="./css/product-view.css">
+        <link rel="stylesheet" href="./css/product-catalog.css">
         <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
@@ -34,7 +35,7 @@
                     <ul>
                         <li><a href="#/" ng-class="{active: isActive('/')}">HOME</a></li>
                         <li><a href="#/aboutus" ng-class="{active: isActive('/aboutus')}">ABOUT US</a></li>
-                        <li><a href="#/blog" ng-class="{active: isActive('/blog')}">PRODUCT</a></li>
+                        <li><a href="#/product-cat" ng-class="{active: isActive('/product-cat')}">PRODUCT</a></li>
                         <li><a href="#/contactus" ng-class="{active: isActive('/contactus')}">CONTACT US</a></li>
                     </ul>
                 </div>
